Fixed scaling + only dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+ @media( min-width: 1280px)  {
+  #page-root > #slide-container > #slide-content {
+    transform: translate(-50%, -50%) scale(1.3) !important;
+  }
+}
+
 th:nth-child(1),
 td:nth-child(1) {
   @apply w-50;
